<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#3aa8c1"
    tools:context=".RegisterActivity">
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#3AA8C1"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="MyApplication"
        app:titleTextColor="#ffffff" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_header"
        android:textColor="@color/textColor"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_name"
            android:textColor="@color/textColor"
            android:textSize="18dp"
            android:id="@+id/tx1"
            android:layout_alignParentLeft="true"
            android:textStyle="bold"
            ></TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tx1"
            android:textColor="@color/textColor"
            android:id="@+id/reg_name"
            ></EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_email"
            android:textColor="@color/textColor"
            android:textSize="18dp"
            android:id="@+id/tx2"
            android:layout_alignParentLeft="true"
            android:textStyle="bold"
            android:layout_below="@+id/reg_name"
            android:layout_marginTop="10dp"
            ></TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tx2"
            android:textColor="@color/textColor"
            android:id="@+id/reg_email"
            android:inputType="textEmailAddress"
            ></EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_password"
            android:textColor="@color/textColor"
            android:textSize="18dp"
            android:id="@+id/tx3"
            android:layout_alignParentLeft="true"
            android:textStyle="bold"
            android:layout_below="@+id/reg_email"
            android:layout_marginTop="10dp"
            ></TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tx3"
            android:textColor="@color/textColor"
            android:id="@+id/reg_password"
            android:inputType="textPassword"
            ></EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_cnf_password"
            android:textColor="@color/textColor"
            android:textSize="18dp"
            android:id="@+id/tx4"
            android:layout_alignParentLeft="true"
            android:textStyle="bold"
            android:layout_below="@+id/reg_password"
            android:layout_marginTop="10dp"
            ></TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tx4"
            android:textColor="@color/textColor"
            android:id="@+id/cnf_password"
            android:inputType="textPassword"
            ></EditText>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg_btn_label"
            style="?android:textAppearanceSmall"
            android:textColor="@color/textColor"
            android:id="@+id/reg_btn"
            android:layout_below="@+id/cnf_password"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_selector"
            android:textStyle="bold"
            ></Button>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="120dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            android:textSize="18dp"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:id="@+id/sign_up"
            ></TextView>
    </RelativeLayout>
</LinearLayout>
</ScrollView>